tests/ui/model_supports_static_variant_unknown.rs
use openrouter_toolkit::model_supports;

const MODEL: &str = model_supports!("moonshotai/kimi-k2-0905:free", "tools");

fn main() {
    let _ = MODEL;
}
